amelioration du design

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ color="#27a1c5"
         <div class="robot">
           <img src="http://phonegap.com/css/images/graphic_build_bot.png" />
         </div>
-        <p>PhoneGap est à l'origine un projet développé par Nitobi Software, puis par Adobe Systems à la suite du rachat de Nitobi par Adobe.
+        <p class="histoire">PhoneGap est à l'origine un projet développé par Nitobi Software, puis par Adobe Systems à la suite du rachat de Nitobi par Adobe.
         En 2011, Adobe donne le projet à la Fondation Apache2, qui le renomme Apache Callback puis Apache Cordova3.
         À partir de là, PhoneGap change de but. Étant dorénavant basé sur Apache Cordova, il n'est plus question de développer la base du système, mais seulement des fonctionnalités autour (Comme Adobe PhoneGap Build)4. </p>
         <h2>Le fonctionnement de PhoneGap</h2>
