--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@ color="#27a1c5"
 <!doctype html>
 <html lang="fr">
   <head >
-    <link rel="stylesheet" type="text/css" href="PhoneGap.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <!--<link rel="stylesheet" type="text/css" href="PhoneGap.css">-->
+    <link rel="stylesheet" type="text/css" href="phonegap-bootstrap.css">
 
     <title>PhoneGap</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
-    <header>
+    <header class="row jumbotron">
 
         <img src="http://basicallydan.github.io/phonegap-not-so-bad-talk/phonegap-logo.png" height="100px"/>
         <h1 > PhoneGap </h1>
@@ -29,66 +33,72 @@ color="#27a1c5"
     </header>
 
 
-      <section>
+    <div class="container">
 
-          <article class='intro'>
-          <h2> Introduction </h2>
-          <p>Adobe PhoneGap ou seulement PhoneGap est un framework destiné à faciliter la création d'applications mobiles pour différentes plateformes - Android, iOS, Windows Phone. Développé par Adobe Systems, il est basé sur Apache Cordova et distribué sous licence open-source1.
-  Les applications qui en résultent sont hybrides, ce qui signifie qu'elles ne sont ni vraiment natives, ni purement basées sur les langages HTML, CSS et JavaScript.</p>
+        <section class="row text-justify">
 
-          <p>Adobe PhoneGap Build est un service internet permettant la compilation d'applications pour les plate-formes Android, iOS et Windows Phone à partir d'un fichier ZIP ou de GitHub.
-  Il gère automatiquement, via le fichier config.xml, les plugins et leurs dépendances, la mises à jour de ceux-ci et du service ou encore la signature des différentes applications générées.
-  Adobe PhoneGap Build intègre également des outils de développement comme un système de travail collaboratif, de débogage ou de mises à jours automatiques de l'application.</p>
+            <article class='col-md-6 col-lg-4'>
+            <h2> Introduction </h2>
+            <p>Adobe PhoneGap ou seulement PhoneGap est un framework destiné à faciliter la création d'applications mobiles pour différentes plateformes - Android, iOS, Windows Phone. Développé par Adobe Systems, il est basé sur Apache Cordova et distribué sous licence open-source1.
+    Les applications qui en résultent sont hybrides, ce qui signifie qu'elles ne sont ni vraiment natives, ni purement basées sur les langages HTML, CSS et JavaScript.</p>
 
-          <img src="http://phonegap.com/css/images/diagram_build_large.png" />
-        </article>
+            <p>Adobe PhoneGap Build est un service internet permettant la compilation d'applications pour les plate-formes Android, iOS et Windows Phone à partir d'un fichier ZIP ou de GitHub.
+    Il gère automatiquement, via le fichier config.xml, les plugins et leurs dépendances, la mises à jour de ceux-ci et du service ou encore la signature des différentes applications générées.
+    Adobe PhoneGap Build intègre également des outils de développement comme un système de travail collaboratif, de débogage ou de mises à jours automatiques de l'application.</p>
 
-
-          <article class='history'>
-            <h2>Histoire</h2>
-          <div class="robot">
-            <img src="http://phonegap.com/css/images/graphic_build_bot.png" />
-          </div>
-          <p class="histoire">PhoneGap est à l'origine un projet développé par Nitobi Software, puis par Adobe Systems à la suite du rachat de Nitobi par Adobe.
-          En 2011, Adobe donne le projet à la Fondation Apache2, qui le renomme Apache Callback puis Apache Cordova3.
-          À partir de là, PhoneGap change de but. Étant dorénavant basé sur Apache Cordova, il n'est plus question de développer la base du système, mais seulement des fonctionnalités autour (Comme Adobe PhoneGap Build)4. </p>
-        </article>
+            <img class="img-responsive" src="http://phonegap.com/css/images/diagram_build_large.png" />
+          </article>
 
 
-          <article class='fonctionnement'>
-            <h2>Le fonctionnement de PhoneGap</h2>
-          <p>PhoneGap fournit une API JavaScript multi-plateforme pour accéder aux fonctions des appareils (ex. appareil photo, GPS, carnet des contacts…).
-          Par exemple, pour faire vibrer l’appareil pendant 3 secondes :</p>
+            <article class='col-md-6 col-lg-4'>
+              <h2>Histoire</h2>
+            <div class="robot">
+              <img class="img-responsive" src="http://phonegap.com/css/images/graphic_build_bot.png" />
+            </div>
+            <p class="histoire">PhoneGap est à l'origine un projet développé par Nitobi Software, puis par Adobe Systems à la suite du rachat de Nitobi par Adobe.
+            En 2011, Adobe donne le projet à la Fondation Apache2, qui le renomme Apache Callback puis Apache Cordova3.
+            À partir de là, PhoneGap change de but. Étant dorénavant basé sur Apache Cordova, il n'est plus question de développer la base du système, mais seulement des fonctionnalités autour (Comme Adobe PhoneGap Build)4. </p>
+          </article>
 
-          <p class="code">"navigator.vibrate(3000);"</p>
-          <p>C’est aussi bien qu’un bon vieux &lt;blink&gt; non ? Bon ne vous inquiétez pas, il y a tout plein d’autres choses très utiles : http://docs.phonegap.com/en/index.html.
+      <!--  </section>
+        <section class="row text-justify"> -->
+            <article class='col-md-6 col-lg-4'>
+              <h2>Le fonctionnement de PhoneGap</h2>
+            <p>PhoneGap fournit une API JavaScript multi-plateforme pour accéder aux fonctions des appareils (ex. appareil photo, GPS, carnet des contacts…).
+            Par exemple, pour faire vibrer l’appareil pendant 3 secondes :</p>
 
-          Cette API est disponible de la même façon pour chaque plateforme (à quelques exceptions près). Depuis la version 3.0 de PhoneGap, elle est disponible sous la forme de plugins (appelés Core Plugins) que vous êtes libres d’intégrer ou non à vos applications. Pour les plus courageux, vous pourrez étendre l’API du noyau grâce à vos propres plugins PhoneGap. (Il en existe déjà déjà pas mal, pour gérer les achats InApp ou les notifications par exemple.)
+            <kbd>"navigator.vibrate(3000);"</kbd>
+            <br/>
+            <br/>
+            <p>C’est aussi bien qu’un bon vieux &lt;blink&gt; non ? Bon ne vous inquiétez pas, il y a tout plein d’autres choses très utiles : http://docs.phonegap.com/en/index.html.
 
-          Une fois le développement fini, PhoneGap vous permet de compiler le code HTML, CSS, JavaScript pour chaque plateforme. Vous pourrez ensuite distribuer les applications dans les différents app stores (Apple App Store, Google Play, Windows Phone Store…).</p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/wOH4aGows40" frameborder="0" allowfullscreen></iframe>
-        </article>
+            Cette API est disponible de la même façon pour chaque plateforme (à quelques exceptions près). Depuis la version 3.0 de PhoneGap, elle est disponible sous la forme de plugins (appelés Core Plugins) que vous êtes libres d’intégrer ou non à vos applications. Pour les plus courageux, vous pourrez étendre l’API du noyau grâce à vos propres plugins PhoneGap. (Il en existe déjà déjà pas mal, pour gérer les achats InApp ou les notifications par exemple.)
+
+            Une fois le développement fini, PhoneGap vous permet de compiler le code HTML, CSS, JavaScript pour chaque plateforme. Vous pourrez ensuite distribuer les applications dans les différents app stores (Apple App Store, Google Play, Windows Phone Store…).</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wOH4aGows40" frameborder="0" allowfullscreen></iframe>
+          </article>
+
+
+
+          <article class='col-md-6 col-lg-12' >
+              <h2>Sources</h2>
+              <ul class ="list-unstyled">
+                <li>
+                  <a href="http://phonegap.com/">PhoneGap</a>
+                </li>
+                <li>
+                  <a href="https://www.youtube.com/channel/UC-b4-PjK0gq4QDpIpsLiFdg">Chaine PhoneGap</a>
+                </li>
+                <li>
+                  <a href="https://fr.wikipedia.org/wiki/Adobe_PhoneGap">Wikipedia</a>
+                </li>
+                <li>
+                  <a href="http://www.alsacreations.com/tuto/lire/1646-introduction-phonegap.html">Tuto</a>
+                </li>
+              </ul>
+          </article>
       </section>
 
-
-    <footer>
-        <h2>Sources</h2>
-        <ul>
-          <li>
-            <a href="http://phonegap.com/">PhoneGap</a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/channel/UC-b4-PjK0gq4QDpIpsLiFdg">Chaine PhoneGap</a>
-          </li>
-          <li>
-            <a href="https://fr.wikipedia.org/wiki/Adobe_PhoneGap">Wikipedia</a>
-          </li>
-          <li>
-            <a href="http://www.alsacreations.com/tuto/lire/1646-introduction-phonegap.html">Tuto</a>
-          </li>
-        </ul>
-    </footer>
-
-
+    </div>
   </body>
 </html>
