--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ color="#27a1c5"
         <section class="row text-justify">
 
             <article class='col-md-6 col-lg-4'>
-            <h2 type="button" data-toggle="collapse" data-target="#intro"> Introduction </h2>
+            <h2 type="button" data-toggle="collapse" data-target="#intro"> <span class="glyphicon glyphicon-globe"></span>Introduction </h2>
             <div id="intro" class="collapse">
             <p>Adobe PhoneGap ou seulement PhoneGap est un framework destiné à faciliter la création d'applications mobiles pour différentes plateformes - Android, iOS, Windows Phone. Développé par Adobe Systems, il est basé sur Apache Cordova et distribué sous licence open-source1.
     Les applications qui en résultent sont hybrides, ce qui signifie qu'elles ne sont ni vraiment natives, ni purement basées sur les langages HTML, CSS et JavaScript.</p>
@@ -56,7 +56,7 @@ color="#27a1c5"
 
 
             <article class='col-md-6 col-lg-4'>
-              <h2 type="button" data-toggle="collapse" data-target="#hist">Histoire</h2>
+              <h2 type="button" data-toggle="collapse" data-target="#hist"><span class="glyphicon glyphicon-book"></span>Histoire</h2>
               <div id="hist" class="collapse">
             <div class="robot">
               <img class="img-responsive" src="http://phonegap.com/css/images/graphic_build_bot.png" />
@@ -70,7 +70,7 @@ color="#27a1c5"
       <!--  </section>
         <section class="row text-justify"> -->
             <article class='col-md-6 col-lg-4'>
-            <h2 type="button" data-toggle="collapse" data-target="#fonc">Le fonctionnement de PhoneGap</h2>
+            <h2 type="button" data-toggle="collapse" data-target="#fonc"><span class="glyphicon glyphicon-wrench"></span>Le fonctionnement de PhoneGap</h2>
             <div id="fonc" class="collapse">
             <p>PhoneGap fournit une API JavaScript multi-plateforme pour accéder aux fonctions des appareils (ex. appareil photo, GPS, carnet des contacts…).
             Par exemple, pour faire vibrer l’appareil pendant 3 secondes :</p>
@@ -90,7 +90,7 @@ color="#27a1c5"
 
 
           <article class='col-md-6 col-lg-12' >
-              <h2 type="button" data-toggle="collapse" data-target="#sources" >Sources</h2>
+              <h2 type="button" data-toggle="collapse" data-target="#sources" ><span class="glyphicon glyphicon-link"></span>Sources</h2>
               <div id="sources" class="collapse">
               <ul class ="list-unstyled">
                 <li>
